--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -60,17 +60,15 @@
 .card {
 	height: 736px;
 	width:1240px;
-
-
-
+	box-shadow: 0 4px 30px 0 rgba(0,0,0,0.6);
+	border-radius:7px;
 	display:grid;
 	grid-template-rows: 1fr 50px;
-
+	background-color:white;
 	&__inputs {
-		box-shadow: 3px 1px 2px grey;
-		border-radius: 3px;
 
-		background-color:skyblue;
+
+		
 		display:grid;
 		grid-template-rows: repeat(4, 1fr);
 		grid-template-columns: repeat(4,1fr);
@@ -80,26 +78,41 @@
 
 .input {
 	display: grid;
-    // grid-template-rows: 1fr 1fr 1fr;
-    grid-template-columns: [number-s] 26px [number-e input-s] 1fr [input-e];
 
-    font-family: 'Montserrat';
-    text-align: center;
-    grid-column-gap: 8px;
-
-    height: 47px;
-
+	grid-template-columns: [number-s] 26px [number-e input-s] 1fr [input-e];
+	text-align:center;
 
 	&__title {
-
+		grid-column: input-s/input-e;
+		color: #b3b3b3;
+		font-size:12px;
+		font-weight:300;
+		
 	}
 
 	input {
-		box-shadow: 0px 1px 1px grey;
-		border-radius: 7px;
+		grid-column: input-s/input-e;
+
+		border: none;
+        font-size: 15px;
+        text-align: center;
+        padding: 4px 0;
+        border-bottom: 1px solid #B3B3B3;
+        margin-bottom: 1px;
+        transition: all .3s ease;
 
 	}
 	&__number {
+		grid-column: number-s/number-e;
+		background-color: purple;
+		color:white;
+		font-size: 20px;
+		text-align:center;
+		line-height:24px;
+		margin-top:4px;
+		padding-top: 1px;
+
+		border-radius:50%;
 
 	}
 }
