--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,99 +1,195 @@
+@mixin button {
+    height: 50px;
+    width: 300px;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px 0 rgba(0,0,0,.1);
+    color: white;
+    font-family: 'Montserrat';
+    font-size: 22px;
+    text-align: center;
+}
+
+
+
+.gray {
+    background: #B3B3B3;
+}
+
+.green {
+    background: #00CB79;
+}
+
 .home {
-	position: relitive;
-	background-color:rgba(207,207,207, .06);
-	display:grid;
+    position: relative;
 
+    background-color: rgba(207, 207, 207, 0.06);
+    display: grid;
 
-	//justify-content:center;
-	justify-items:center;
+    justify-items: center;
+    // align-items: center;
+    grid-template-rows: [header-s] 218px [header-e card-s] minmax(736px, 994px) [card-e];
 }
 
 .header {
-	align-self:center;
-	font-family: 'Montserrat';
-	color:white;
-	text-align: center;
+    color: white;
+    font-family: 'Montserrat';
+    text-align: center;
+    align-self: center;
+    &__skew {
+        -webkit-clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
+        clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
 
-	&__skew{
-		
-		z-index:-10;
-		top:0;
-		left:0;
-		position:absolute;
-		width: 100vw;
-		height: 110vh;
-		background-color: #444;
-		clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
+        z-index: -10;
+        top: 0;
+        left: 0;
+        position: absolute;
+        height: 110vh;
+        width: 100vw;
+        background-color: #444444;
+    }
+    &__border {
+        -webkit-clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
+        clip-path: polygon(0 48%, 100% 23%, 100% 25%, 0 50%);
 
+        z-index: -10;
+        top: 0;
+        left: 0;
+        position: absolute;
+        height: 110vh;
+        width: 100vw;
+        background-color: #00CB79;
+    }
 
-	}
+    h1 {
 
-	&__border{
-		-webkit-backface-visibility:hidden;
-		z-index:-11;
-		top:0;
-		left:0;
-		position:absolute;
-		width: 100vw;
-		height: 110vh;
-		background-color: purple;
-		clip-path: polygon(0 45%, 100% 20%, 100% 27%, 0 52%);
+        font-size: 50px;
+        font-weight: 500;
+        line-height: 100px;
+    }
 
-	}
-	
-	h1 {
-
-		font-size:36px;
-		font-weight: 600;
-		line-height:44px;
-		
-	}
-	p {
-		color: rgba(255, 255, 255, .6);
-		font-size: 15px;
-		font-weight: 300;
-		line-height: 19px;
-		width: 403px;
-	}
+    p {
+        color: rgba(255,255,255,0.75);
+        font-size: 25px;
+        font-weight: 300;
+        line-height: 19px;
+        width: 673px;
+    }
 }
 
 .card {
-	height: 736px;
-	width:1240px;
-	box-shadow: 0 4px 30px 0 rgba(0,0,0,0.6);
-	border-radius:7px;
-	display:grid;
-	grid-template-rows: 1fr 50px;
-	background-color:white;
-	&__inputs {
+	margin-top: 400px;
+}
+.card {
+	
+    min-height: 736px;
+    max-height: 994px;
+    width: 1240px;
+    box-shadow: 0 4px 30px 0 rgba(0,0,0,.06);
+    border-radius: 7px;
 
+    display: grid;
+    grid-template-rows:1fr 50px;
+    background-color: white;
 
-		
-		display:grid;
-		grid-template-rows: repeat(4, 1fr);
-		grid-template-columns: repeat(4,1fr);
+    
 
-	}
+    &__inputs {
+
+        // background-color: skyblue;
+        display: grid;
+        grid-template-rows: repeat(4, 27px);
+        grid-template-columns: repeat(4, 1fr);
+
+        grid-row-gap: 120px;
+        margin-top: 66px;
+        margin-left: 83px;
+        margin-right: 83px;
+
+        justify-items: center;
+        align-items: center;
+    }
+
+    button:focus {
+        outline: none;
+    }
+
+    button {
+    	margin-top: 350px;
+        justify-self: center;
+
+    }
+
+    &__generate {
+        background-color: #00CB79;
+        transform: translateY(-300px);
+        @include button;
+    }
+
+    &__clear {
+        transform: translateY(50%);
+        background-color: #45B0E5;
+        @include button;
+    }
+
+    &__content {
+        width: 1100px;
+        height: 297px;
+        background-color: #F2F2F2;
+
+        justify-self: center;
+        margin-bottom: 84px;
+
+        font-family: 'Montserrat';
+
+        &__label {
+            height: 18px;
+            width: 18px;
+            line-height: 22px;
+            background-color: black;
+            border-radius: 50%;
+            font-size: 14px;
+         
+            text-align: center;
+            color: white;
+            // padding-top: 3px;
+            display: inline-block;
+            margin: 4px;
+        }
+
+        p {
+            line-height: 29px;
+            padding: 50px 47px;
+            font-size: 16px;
+            font-weight: 300;   
+        }
+    }
+
 }
 
 .input {
-	display: grid;
+    display: grid;
+    // grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: [number-s] 26px [number-e input-s] 1fr [input-e];
 
-	grid-template-columns: [number-s] 26px [number-e input-s] 1fr [input-e];
-	text-align:center;
+    font-family: 'Montserrat';
+    text-align: center;
+    grid-column-gap: 8px;
 
-	&__title {
-		grid-column: input-s/input-e;
-		color: #b3b3b3;
-		font-size:12px;
-		font-weight:300;
-		
-	}
+    height: 47px;
 
-	input {
-		grid-column: input-s/input-e;
+    &__title {
+        grid-column: input-s/input-e;
 
-		border: none;
+        
+        color: #B3B3B3;
+        font-size: 12px;
+        font-weight: 300;
+
+    }
+    input {
+        grid-column: input-s/input-e;
+
+        border: none;
         font-size: 15px;
         text-align: center;
         padding: 4px 0;
@@ -101,18 +197,63 @@
         margin-bottom: 1px;
         transition: all .3s ease;
 
-	}
-	&__number {
-		grid-column: number-s/number-e;
-		background-color: purple;
-		color:white;
-		font-size: 20px;
-		text-align:center;
-		line-height:24px;
-		margin-top:4px;
-		padding-top: 1px;
+        &:focus {
+            outline: none;
+            border-bottom: 1px solid rgb(0, 255, 247);
+   
+        }
+        // width: 190px;
+        // height: 40px;
+    }
+    &__number {
+        grid-column: number-s/number-e;
+        color: white;
+        font-size: 20px;
+        line-height: 24px;
+        padding-top: 1px;
+        height: 26px;
+        width: 26px;
+        border-radius: 50%;
+    }
+}
 
-		border-radius:50%;
+.footer {
 
-	}
+    height:24px; // Replace with the height your footer should be
+    width: 100%; // Don't change
+
+    background-attachment: scroll;
+    background-position: 0% 0%;
+    position: fixed;
+    bottom: 0pt;
+    left: 0pt;
+
+    color: white;
+    font-family: 'Montserrat';
+    text-align: center;
+    align-self: center;
+    &__skew {
+        -webkit-clip-path: polygon(0 45%, 100% 20%, 100% 100%, 0 100%);
+		clip-path: polygon(0 45%, 100% 20%, 100% 100%, 0 100%);
+
+        z-index: -10;
+        top: 0;
+        left: 0;
+        position: absolute;
+        height: 110vh;
+        width: 100vw;
+        background-color: #444444;
+    }
+    &__border {
+        -webkit-clip-path: polygon(0 0, 100% 0%, 100% 25%, 0 50%);
+        clip-path: polygon(0 48%, 100% 23%, 100% 25%, 0 50%);
+
+        z-index: -10;
+        top: 0;
+        left: 0;
+        position: absolute;
+        height: 110vh;
+        width: 100vw;
+        background-color: #00CB79;
+    }
 }
